2023-09-02T01:05:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6055412574 # 1171
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-02
* notice: last 14d: unq all: 14 35
* notice: prev accum: outdated-unq outdated-all / unq all: 461 795 / 487 829
* notice: next accum: outdated-unq outdated-all / unq all: 461 795 / 487 830
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2023-09-01]

2023-09-01T08:19:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6047122481 # 1169
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
* notice: last 14d: unq all: 14 34
* notice: prev accum: outdated-unq outdated-all / unq all: 461 795 / 484 825
* notice: next accum: outdated-unq outdated-all / unq all: 461 795 / 487 829
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2023-09-01]

2023-09-01T01:11:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6044181745 # 1168
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
* notice: last 14d: unq all: 13 30
* notice: prev accum: outdated-unq outdated-all / unq all: 460 794 / 484 825
* notice: next accum: outdated-unq outdated-all / unq all: 461 795 / 484 825
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-18] / []

2023-08-31T16:20:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6039894533 # 1167