@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-02T01:05:02Z",
+  "timestamp" : "2023-09-02T08:17:01Z",
   "count_outdated" : 795,
   "uniques_outdated" : 461,
-  "count" : 830,
-  "uniques" : 487,
+  "count" : 831,
+  "uniques" : 488,
   "clones" : [
     {
       "timestamp": "2023-08-19T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
