@@ -1,5 +1,5 @@
 {
-  "count": 35,
+  "count": 36,
   "uniques": 14,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2023-09-01T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-09-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
